--- a/index.html
+++ b/index.html
@@ -5,25 +5,56 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		type="text/css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<title>Murray Bealby</title>
 </head>
 
 <body>
 
-<header>
+	<header>
+		<div class="row">
+			<a href="index.html" class="col-md-4 logo"></a>
 
-</header>
+			<div class="col-md-8">
+				<div class="row bg-color-name-title">
+					<div class="col heading">
+						<h1 class="name">Murray Bealby</h1>
+						<h2 class="title">Full Stack Developer</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+                        <ul id="nav" class="list-inline">
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Home</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Resume</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Contact</span></a>
+                            </li>
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Download</span></a>
+                            </li>
+					</div>
+				</div>
+			</div>
+		</div>
 
-<section>
+	</header>
 
-</section>
+	<section>
 
-<footer>
+	</section>
 
-</footer>
+	<footer>
+
+	</footer>
 
 
 </body>
