--- a/contact.html
+++ b/contact.html
@@ -53,16 +53,8 @@
 
 	</header>
 
-	<section class="container-fluid">
-		<div class="row row-table">
-			<div class="col-md-8 bg-color-three-reasons section-column">
-				<div class="row">
-					<div class="col">
-						<h3 class="section-heading uppercase">About Me</h3>
-					</div>
-				</div>
-			</div>
-		</div>
+	<section>
+
 	</section>
 
 	<footer class="container-fluid">
@@ -107,12 +99,12 @@
 							<i class="fab fa-pinterest" aria-hidden="true"></i>
 							<span class="sr-only">Pinterest</span>
 						</a>
-					<li class="list-inline-item">
+                        <li class="list-inline-item">
 						<a target="_blank" href="#">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Instagram</span>
 						</a>
-					<li class="list-inline-item">
+                        <li class="list-inline-item">
 						<a target="_blank" href="#">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span>
