Changes to about-me section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,44 @@
 						<h3 class="section-heading uppercase">About Me</h3>
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">What do I do?</h4>
+								<p>I am a professional Management Accountant with a flexible personality who readily
+									adapt to different situations and who thrives on delivery and success.
+							</div>
+						</div>
+					</div>
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+								<p>By being an excellent team player that enjoys new challenges and opportunities to
+									achieve highest level results.
+							</div>
+						</div>
+					</div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+								<p>Self-motivated and self- reliant and continually
+                                seeking to improve and develop processes and systems to increase efficiency.
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -70,8 +108,8 @@
 			<div class="col-sm-4">
 				<h5 class="uppercase general-sub">About</h5>
 				<p class="inline-block">
-					I am a professional Financial Accountant/ Controller with a flexible personality who readily adapts
-					to different situations and who thrives on delivery and success.
+					A skilled professional Management Accountant with over 15 years of experience in the financial
+					field.
 				</p>
 			</div>
 			<div class="col-sm-4">
