--- a/resume.html
+++ b/resume.html
@@ -53,118 +53,58 @@
 
 	</header>
 
-<section class="container-fluid">
-        <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
-                <div class="row">
-                    <div class="col-12">
-                        <h3 class="section-heading uppercase">
-                            Personal Info
-                        </h3>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            Murray Bealby
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Address:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            31 Kalmgatan, Johanneshov, Stockholm, 121 45
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Phone:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            0764220155
-                        </p>
-                    </div>
-                </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Email:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p>
-                            mgbealby@gmail.com
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                                <p>
-                                    I'm a Management Accountant with a wealth of diverse life and technical experience that I bring to every team.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
-                                <p>
-                                    By being an excellent team player that enjoys new challenges and opportunities to
-										achieve highest level results.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>
-                                    Self-motivated and self- reliant I continually
-								    seek to improve and develop processes and systems to increase efficiency.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-    </section>
+	<section class="container-fluid">
+		<div class="row">
+			<div class="col-md-4 bg-color-personal-info section-column">
+				<div class="row">
+					<div class="col-12">
+						<h3 class="section-heading uppercase">
+							Work History
+						</h3>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-8 bg-color-three-reasons section-column">
+				<div class="row">
+					<div class="col">
+						<h3 class="section-heading uppercase">My Skills</h3>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">Front End</h4>
+								<p>
+									I'm a Management Accountant with a wealth of diverse life and technical experience
+									that I bring to every team.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+						<div class="row">
+							<div class="col-2">
+								<i class="three-reasons-icon fa fa-cogs" aria-hidden="true"></i>
+							</div>
+							<div class="col-10">
+								<h4 class="three-reasons-heading uppercase">Back End</h4>
+								<p>
+									By being an excellent team player that enjoys new challenges and opportunities to
+									achieve highest level results.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+
+	</section>
 
 	<footer class="container-fluid">
 		<div id="footer-details" class="row">
@@ -208,12 +148,12 @@
 							<i class="fab fa-pinterest" aria-hidden="true"></i>
 							<span class="sr-only">Pinterest</span>
 						</a>
-                        <li class="list-inline-item">
+					<li class="list-inline-item">
 						<a target="_blank" href="#">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Instagram</span>
 						</a>
-                        <li class="list-inline-item">
+					<li class="list-inline-item">
 						<a target="_blank" href="#">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">YouTube</span>
