--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 								<a href="contact.html"
 									class="hvr-sweep-to-bottom"><i class="fas fa-comments" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
+                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+								<a href="interests.html"
+									class="hvr-sweep-to-bottom"><i class="fas fa-comments" aria-hidden="true"></i><span>Contact</span></a>
+							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
 								<a href="assets/cv/murraybealby.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fas fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
