Added APIkey for google maps

--- a/interests.html
+++ b/interests.html
@@ -160,6 +160,9 @@
             </div>
         </div>
     </footer>
+    <script>
+    let APIkey = "AIzaSyAuCW28tB40INR2ZFNAB1XdCUQ8N9LuLD0";
+    </script>
 </body>
 
 </html>
