Added Google API markers

--- a/interests.html
+++ b/interests.html
@@ -186,11 +186,9 @@
 			</div>
 		</div>
 	</footer>
-	<script>
-    
-    </script>
-    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuCW28tB40INR2ZFNAB1XdCUQ8N9LuLD0&callback=initMap"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuCW28tB40INR2ZFNAB1XdCUQ8N9LuLD0&callback=initMap"></script>
+    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
